src/bootstrap/test/v0_7/rejects/01_defer_in_if/main.zg
# requires: v0.7

fn f() {
    if true {
        defer print 1
    }
}

f()
